Refactor js files

--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -1,6 +1,7 @@
 body {
     overflow-x: hidden;
     overflow-y: hidden;
+    background-color: white;
 }
 input, button {
     padding: 10px;
@@ -12,15 +13,16 @@ input, button {
 }
 #style-button {
     box-shadow: insert, black;
-    background: linear-gradient(to bottom,  white  5%, rgb(72, 182, 226) 100%);
+    background: linear-gradient(to bottom, #F0EEE2  5%, #99ADB4 100%);
     background-color: white;
     border-radius: 5px;
     display: inline-block;
     cursor: pointer;
+    border: none;
 }
 #style-button:hover {
     background: black;
-    background-color:rgb(72, 182, 226);
+    background-color: #99ADB4;
 }
 #style-button:active {
     position: relative;
