Add buttons, style changes

--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -6,12 +6,12 @@ body {
 input, button {
     padding: 10px;
 }
-.buttons::after {
-    content: "\a";
+.document-buttons::after, .style-buttons::after, #input::after{
+    content: "\A";
     display: block;
     white-space: pre;
 }
-#style-button {
+.style-buttons button {
     box-shadow: insert, black;
     background: linear-gradient(to bottom, #F0EEE2  5%, #99ADB4 100%);
     background-color: white;
@@ -20,11 +20,15 @@ input, button {
     cursor: pointer;
     border: none;
 }
-#style-button:hover {
+.style-buttons button:hover {
     background: black;
     background-color: #99ADB4;
 }
-#style-button:active {
+.style-buttons button:focus {
+    background: black;
+    background-color: #99ADB4;
+}
+.style-buttons button:active {
     position: relative;
     top: 1px;
 }
