--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -32,3 +32,15 @@ input, button {
     position: relative;
     top: 1px;
 }
+
+.form-popup {
+	display: none;
+	border: 3px solid #121212;
+	background-color: #fefefe;
+	z-index: 9;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	padding: 24px;
+}
