--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -1,3 +1,7 @@
+:root {
+    --accent_grey: #eceff1;
+    --accent_blue: #2196f3;
+}
 body {
     overflow-x: hidden;
     overflow-y: hidden;
@@ -11,21 +15,29 @@ input, button {
     display: block;
     white-space: pre;
 }
-.style-buttons button {
+.style-buttons button, .document-buttons button {
     box-shadow: insert, black;
-    background: linear-gradient(to bottom, #F0EEE2  5%, #99ADB4 100%);
-    background-color: white;
+    background: var(--accent_grey);
     border-radius: 5px;
     display: inline-block;
     cursor: pointer;
     border: none;
 }
+.document-buttons :focus {
+    background: var(--accent_blue);
+    top: 1px;
+    position: relative;
+}
 input[type=color] {
     width: 5%;
     height: 35px;
     box-shadow: insert, black;
-    background: linear-gradient(to bottom, #F0EEE2  5%, #99ADB4 100%);
-    background-color: white;
+    background: var(--accent_grey);
+    border-radius: 5px;
+}
+input[type=color]:focus {
+    background: black;
+    background-color: var(--accent_blue);
     border-radius: 5px;
 }
 .form-popup {
