--- a/static/Auth/styles.css
+++ b/static/Auth/styles.css
@@ -1,38 +1,55 @@
+:root {
+    --accent_grey: #eceff1;
+    --accent_blue: #2196f3;
+}
+
 .box{
     align-items: center;
     padding: 50px 40px;
     width: 20%;
     margin: auto;
-    border: 2px solid #768df5;
-    padding-left: 2.2%;
+    border: 2px solid var(--accent_blue);
     justify-content: center;
     color:  white;
-    background: #768df5;
-    border-radius: 10px;
+    background: var(--accent_grey);
+    border-radius: 12px;
+    text-align: center;
 }
 
 .btn-primary {
-    width: 80%;
-    height: 30px;
+    width: 100%;
+    height: 40px;
     margin-top: 20px;
     justify-content: center;
-    background-color: #768df5;
-    border: 2px solid white;
-    color: white;
+    background-color: var(--accent_blue);
+    border: 2px solid var(--accent_blue);
+    color: var(--accent_grey);
+    font-size: large;
     overflow: hidden;
-    border-radius: 10px;
+    border-radius: 12px;
 }
 
+.btn-primary:focus {
+    background-color: #0086c3;
+}
 
-h1 {text-align: center;}
+h1 {
+    text-align: center;
+    color: var(--accent_blue);
+}
+
+a {
+    display: inline-block;
+    color: var(--accent_blue);
+}
 
 a:visited {
-    color: white;
+    color: var(--accent_blue);
     background-color: transparent;
 }
 
 a:hover {
-    color:  white;
+    color:  #0086c3;
     background-color: transparent;
     text-decoration: underline;
 }
@@ -43,12 +60,24 @@ a:hover {
     padding: 5px 7px;
     margin: 8px 0;
     display: inline-block;
-    border: 2px solid #ccc;
+    border: 2px solid var(--accent_blue);
     box-sizing: border-box;
     color: #757575;
     border-radius: 10px;
-  }
+}
 
-  .text-center {
+.text-center {
     text-align: center;
-  }
+}
+
+#messageHolder {
+    color: var(--accent_blue);
+    text-align: center;
+    font-size: large;
+}
+
+#messageHolder::after {
+    content: "\A";
+    display: block;
+    white-space: pre;
+}
