--- a/static/Auth/styles.css
+++ b/static/Auth/styles.css
@@ -3,11 +3,11 @@
     padding: 50px 40px;
     width: 20%;
     margin: auto;
-    border: 2px solid #768df5;
+    border: 2px solid #2196f3;
     padding-left: 2.2%;
     justify-content: center;
     color:  white;
-    background: #768df5;
+    background: #2196f3;
     border-radius: 10px;
 }
 
@@ -16,11 +16,13 @@
     height: 30px;
     margin-top: 20px;
     justify-content: center;
-    background-color: #768df5;
+    background-color: #2196f3;
     border: 2px solid white;
     color: white;
     overflow: hidden;
     border-radius: 10px;
+    text-align: center;
+
 }
 
 
@@ -38,7 +40,6 @@ a:hover {
 }
 
 .Inputs {
-    width: 100%;
     height: 30px;
     padding: 5px 7px;
     margin: 8px 0;
@@ -49,6 +50,65 @@ a:hover {
     border-radius: 10px;
   }
 
+  .p100 {
+      width: 100%;
+  }
+
+  .p30 {
+    width: 30%;
+  }
+
+  .wauto{
+      width: auto;
+  }
+
+  .hauto {
+      height: auto
+  }
+
   .text-center {
     text-align: center;
   }
+
+  .document {
+    height: 10%;
+    border: 2px solid white;
+    background-color: red;
+    border-radius: 10px;
+    padding: 2%;
+    margin-bottom: 10px;
+    color: white;
+    font-size: 20px;
+    background-color: #2196f3;
+}
+
+#footer_container > a {
+    margin-left: 20px;
+    margin-top: 20px;
+}
+body {
+    overflow: scroll !important;
+}
+.documents_holder{
+    width: 30%; 
+    margin-left: 50px;
+    margin-top: 30px; 
+    border: 2px solid #2196f3; 
+    height: auto;
+    max-height: 450px; 
+    padding: 1%;
+    overflow-y: scroll;
+    border-radius: 10px;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
